--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Run Python commands
       run: |
           pip install --upgrade pip
-          python3.8 -m venv env
-          source env/bin/activate
+          source .venv/bin/activate
           echo "VIRTUAL ENV:" $VIRTUAL_ENV
           pip freeze > requirements.txt
     
