removing dynamically adding requirements.txt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-    - name: Run Python commands
-      run: |
-          pip install --upgrade pip
-          source ${{ github.workspace }}.venv/bin/activate
-          echo "VIRTUAL ENV:" $VIRTUAL_ENV
-          pip freeze > requirements.txt
-    
     - name: Package Windows Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
@@ -31,4 +20,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: my-exe
-        path: src/dist/windows
+        path: /dist/windows
