--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,14 @@ jobs:
           - os: macos-latest
             TARGET: macos
             CMD_BUILD: >
-                pyinstaller -F -w -n clipster -i resources/clipster.icns cli.py &&
+                pyinstaller "Extract NSBL Games.spec" &&
                 cd dist/ &&
                 zip -r9 clipster clipster.app/                
             OUT_FILE_NAME: clipster.zip
             ASSET_MIME: application/zip
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.ico cli.py
+            CMD_BUILD: pyinstaller "Extract NSBL Games.spec"
             OUT_FILE_NAME: clipster.exe
             ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
