--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
               cd dist/ &&
               zip -r "extract-nsbl-games.zip" "Extract NSBL Games/"
             OUT_FILE_NAME: "extract-nsbl-games.zip"
-            ASSET_MIME: application/vnd.microsoft.portable-executable
+            ASSET_MIME: application/zip
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python 3.8
