--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,10 @@ jobs:
         include:
           - os: macos-latest
             TARGET: macos
-            CMD_BUILD: >
-              pyinstaller "Extract NSBL Games.spec"
+            CMD_BUILD: pyinstaller "Extract NSBL Games.spec"
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: >
-              pyinstaller "Extract NSBL Games.spec"
+            CMD_BUILD: pyinstaller "Extract NSBL Games.spec"
     steps:
       - uses: actions/checkout@v1
       - name: Set up Python 3.8
@@ -54,7 +52,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements${{matrix.TARGET}}.txt
       - name: Build with pyinstaller for ${{matrix.TARGET}}
-        run: ^
+        run: |
           ${{matrix.CMD_BUILD}} &&
           cd dist/
       - name: zipping files
